--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
         @media only screen and (max-width:768px) {
-            body {
-                overflow-x: hidden;
-            }
+            
         }
     </style>
 </head>
@@ -38,9 +36,7 @@
         </div>
 
         <input id="header_checkbox" type="checkbox" />
-        <label for="header_checkbox" style="cursor:pointer;">
-            <img src="images/icon-hamburger.svg" />
-        </label>
+        <label id="label_header_checkbox" for="header_checkbox" />                    
         <ul id="header_links">
             <li class="link_items"><a href="#">Pricing</a></li>
             <li class="link_items"><a href="#">Product</a></li>
