Fix hamburger icon.
Incorrect label syntax.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <input id="header_checkbox" type="checkbox" />
-        <label id="label_header_checkbox" for="header_checkbox" />                    
+        <label id="label_header_checkbox" for="header_checkbox" ></label>
         <ul id="header_links">
             <li class="link_items"><a href="#">Pricing</a></li>
             <li class="link_items"><a href="#">Product</a></li>
